manifests/app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops-app
  labels:
    environment: dev
    managed-by: argocd
